Fixed neptune pic not rotating. It was because of the Z-index

--- a/css/photo-gallery.css
+++ b/css/photo-gallery.css
@@ -118,7 +118,6 @@ pre{
   top: 300px;
   height: 120px;
   width: 120px;
-  z-index: -2;
 }
 
 #flower2{
@@ -127,7 +126,7 @@ pre{
   top: 380px;
   height: 100px;
   width: 100px;
-  z-index: -1;
+  z-index: 0;
 }
 
 #neptune-text{
@@ -148,7 +147,7 @@ pre{
 
 #tape4{
   position: absolute;
-  bottom: 60px;
+  bottom: 100px;
   left: 460px;
   height: 110px;
   width: 110px;
